Add a Moby Dick page and menus

--- a/tags.html
+++ b/tags.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
 
     <h1>Important HTML tags</h1>
 
@@ -63,6 +69,28 @@
             <td>table data</td>
             <td>include a table data cell</td>
           </tr>
+          <tr>
+            <td><code>div</code></td>
+            <td>Division</td>
+            <td>A flow Container</td>
+          </tr>
+          <tr>
+            <td><code>header</code></td>
+            <td>Header</td>
+            <td>Group headers</td>
+          </tr>
+          <tr>
+            <td><code>ol</code></td>
+            <td>Ordered List</td>
+            <td>Numbered List</td>
+          </tr>
+          <tr>
+            <td><code>ul</code></td>
+            <td>Unordered List</td>
+            <td>Bulleted List</td>
+          </tr>
+      </table>
+
     <h2>Inline Elements</h2>
 
     <table>
@@ -80,6 +108,64 @@
             <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
             <td><em>technical sophistication</em></td>
         </tr>
+        <tr>
+        <td><code>strong</code></td>
+        <td>strong</td>
+        <td>make strong text</td>
+        <td>
+          <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
+        </td>
+        <td><strong>at least a billion people</strong></td>
+      </tr>
+      <tr>
+        <td><code>a</code></td>
+        <td>anchor</td>
+        <td>make hyperlink</td>
+        <td>
+          <code>
+            &lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;
+          </code>
+        </td>
+        <td><a href="https://learnenough.com/">Learn Enough</a></td>
+      </tr>
+      <tr>
+        <td><code>img</code></td>
+        <td>image</td>
+        <td>include an image</td>
+        <td>
+          <code>
+            &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
+          </code>
+        </td>
+        <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl" /></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>Inline content</td>
+        <td>Group elements for styling</td>
+        <td>
+          <code>
+            &lt;span>Call me Ishmael&lt;/span&gt;
+          </code>
+        </td>
+        <td><span>Call me Ishmael</span></td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>List Element</td>
+        <td>Add items to a list</td>
+        <td>
+          <code>
+            &lt;li>Call me Ishmael&lt;/li&gt;
+          </code>
+        </td>
+        <td>
+        <ol>
+          <li>First List Item</li>
+          <li>Second List Item</li>
+        </ol>
+        </td>
+      </tr>
     </table>
 
   </body>
