Finish the Sample website

--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,12 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right; ">
+      <a href="index.html" style="text-decoration: none; color: blue;">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none;
+      color: blue" >HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none;
+      color: blue">Moby Dick</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -167,6 +169,41 @@
         </td>
       </tr>
     </table>
+
+    <h2>Document Tags</h2>
+
+    <table>
+          <tr>
+            <th>Tag</th>
+            <th>Name</th>
+            <th>Purpose</th>
+          </tr>
+          <tr>
+            <td><code>html</code></td>
+            <td>HTML main section</td>
+            <td>used by browser to identify a page is in html</td>
+          </tr>
+          <tr>
+            <td><code>head</code></td>
+            <td>Document Head</td>
+            <td>defines document title and other elements</td>
+          </tr>
+          <tr>
+            <td><code>body</code></td>
+            <td>Body of document</td>
+            <td>Used for what the browser displays</td>
+          </tr>
+          <tr>
+            <td><code>title</code></td>
+            <td>Title</td>
+            <td>Defines what the browser displays as the title</td>
+          </tr>
+          <tr>
+            <td><code>meta</code></td>
+            <td>META tag</td>
+            <td>Defines document specific info</td>
+          </tr>
+      </table>
 
   </body>
 </html>
